# cl

./: README.md  index.html  package-lock.json  package.json
backend/: Procfile  pyproject.toml  requirements.txt
backend/codeleap/: settings.py  url_list.py  urls.py  wsgi.py
backend/post/: models.py  serializers.py  urls.py  views.py
backend/post/migrations/: 0001_initial.py  0002_alter_post_created_datetime.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.css
frontend/src/api/: api.ts
frontend/src/components/: DeleteModal.module.css  DeleteModal.tsx  EditModal.tsx  Input.module.css  Post.tsx  TextArea.module.css
frontend/src/pages/: Home.module.css  Home.tsx  Signup.module.css
frontend/src/redux/: slice.ts  store.ts
frontend/src/types/: types.ts
src/: App.css  App.tsx  index.css
src/components/: Button.module.css  Button.tsx  DeleteModal.tsx  EditModal.module.css  EditModal.tsx  Input.module.css  Input.tsx  Post.module.css  TextArea.module.css  TextArea.tsx
src/pages/: Home.module.css  Home.tsx  Signup.tsx
