[tool.poetry]
name = "codeleap"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.2"
django-cors-headers = "^3.14.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.6"
whitenoise = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
